@@ -1,7 +1,7 @@
 package HTML::StateTable;
 
 use 5.010001;
-use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 24 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 25 $ =~ /\d+/gmx );
 
 use HTML::StateTable::Constants qw( EXCEPTION_CLASS FALSE NUL RENDERER_CLASS
                                     RENDERER_PREFIX TABLE_META TRUE );
@@ -382,7 +382,7 @@ location of the page size control
 
 has 'page_size_control_location' =>
    is      => 'ro',
-   isa     => NonEmptySimpleStr,
+   isa     => SimpleStr,
    default => 'BottomRight';
 
 =item pager
